Suggested fixes